@@ -55,6 +55,16 @@ public:
 	
 	CEGUI::Window* getWindow();
 
+	/**
+	Call this from the gui code whenever an icon is dragged away from the slot.
+	*/
+	void notifyIconDraggedOff(EmberOgre::Gui::EntityIcon* entityIcon);
+	
+	/**
+	Emitted when an icon has been dragged away from the slot as a result of an user action.
+	*/
+	sigc::signal<void, EmberOgre::Gui::EntityIcon*> EventIconDraggedOff;
+
 };
 
 }
